--- a/line-budget-bot-backend/package.json
+++ b/line-budget-bot-backend/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@line/bot-sdk": "^9.0.0",
     "@prisma/client": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.19.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.0.0",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.0.0",
     "prisma": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.0"
